# Qt-VTK-viewer

./: .gitignore  Build-VTK.md  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qvtkwidget3.cpp  qvtkwidget3.h  resources.qrc  scenewidget.cpp  scenewidget.h
doc/: Build-VTK.md
